# Ignis

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
Ignis/Editor/: CMakeLists.txt
Ignis/Editor/src/: content_browser_panel.cpp  content_browser_panel.hpp  filedialog.hpp  ignis.cpp  ignis.hpp  inspector_panel.cpp  inspector_panel.hpp  main.cpp  scene_hierarchy_panel.cpp  scene_hierarchy_panel.hpp
Ignis/Engine/: CMakeLists.txt
Ignis/Engine/src/: ignis_engine.hpp
Ignis/Engine/src/assets/: asset.cpp  asset.hpp  asset_manager.cpp  asset_manager.hpp
Ignis/Engine/src/core/: application.cpp  application.hpp  base.hpp  buffer.hpp  gui.cpp  gui.hpp  imgui_layer.cpp  imgui_layer.hpp  logger.cpp  logger.hpp  object.hpp  types.hpp  utils.hpp  uuid.cpp  uuid.hpp  window.cpp  window.hpp
Ignis/Engine/src/core/input/: Input.hpp  app_event.cpp  app_event.hpp  event.hpp  input.cpp  key_codes.hpp  key_event.cpp  key_event.hpp  mouse_codes.hpp  mouse_event.cpp  mouse_event.hpp
Ignis/Engine/src/math/: math.cpp  math.hpp
Ignis/Engine/src/project/: project.cpp  project.hpp
Ignis/Engine/src/renderer/: camera.cpp  camera.hpp  framebuffer.cpp  framebuffer.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
Ignis/Engine/src/renderer/gl/: buffer.hpp  gl_buffer.cpp  gl_buffer.hpp  gl_framebuffer.cpp  gl_framebuffer.hpp  gl_index_buffer.cpp  gl_index_buffer.hpp  gl_renderer_2d.cpp  gl_renderer_2d.hpp  gl_shader.cpp  gl_shader.hpp  gl_texture.cpp  gl_texture.hpp  gl_vertex_array.cpp  gl_vertex_array.hpp  gl_vertex_buffer.cpp  gl_vertex_buffer.hpp  gl_wrapper.hpp
Ignis/Engine/src/scene/: components.cpp  components.hpp  entt.hpp  scene.cpp  scene.hpp  scene_manager.cpp  scene_manager.hpp
Ignis/Engine/src/scripting/: script_instance.cpp  script_instance.hpp
Ignis/Engine/src/serializer/: project_serializer.cpp  project_serializer.hpp  scene_serializer.cpp  scene_serializer.hpp  serializer.cpp  serializer.hpp
Ignis/Resources/Shaders/: default.frag.glsl  default.vert.glsl
Ignis/TestProject/: CMakeLists.txt  test_project.ixproj
Ignis/TestProject/scenes/: test_scene.ixscene  test_scene_b.ixscene
Ignis/TestProject/src/: main.cpp
